--- a/sass/components/_team-section.scss
+++ b/sass/components/_team-section.scss
@@ -27,21 +27,24 @@
     
 }
 
-.team-image{
-
+.team-image{ 
     width: 320px;
     height: 300px;
 
-    
 
-@media screen and (min-width:480px) and (max-width:767px) {
+@media screen and (min-width:480px)  {
     width: 450px;
     height: 460px;
 }
 
-    @media screen and (min-width:768px) and (max-width:1199px){
+    @media screen and (min-width:768px) {
         width: 354px;
         height: 374px;
+    }
+
+    @media screen and (min-width:1200px) {
+        width: 270px;
+        height: 260px;
     }
 }
 
