--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -34,7 +34,7 @@
 display: flex;
     @media screen and (min-width: 320px) and (max-width:479px) {
         flex-wrap: wrap;
-        gap: 20px;
+        gap: 20px 50px;
     }
     
 }
