--- a/css/main.css
+++ b/css/main.css
@@ -2223,12 +2223,6 @@ img {
 }
 
 /* footer 2 bloc */
-@media screen and (max-width: 767px) {
-  .footer-social {
-    margin-bottom: 60px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .footer-social {
     margin-left: 70px;
@@ -2414,6 +2408,12 @@ img {
 .footer-button__icons {
   fill: #ffffff;
   margin-left: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer-wrapper {
+    margin-bottom: 60px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
